--- a/coin-flips.ipynb
+++ b/coin-flips.ipynb
@@ -553,14 +553,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#"
+    "## Summary "
    ]
   },
   {
